BE: bit modification on the configs